--- a/src/main/webapp/WEB-INF/views/jspf/adminf/proceeds_per_period.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/adminf/proceeds_per_period.jspf
@@ -2,9 +2,10 @@
 
 <div class="edit_penal">
 
-    <br><strong>Выручка:</strong>
+    <br><strong>Proceed:</strong>
 
     <p>&nbsp;</p>
+
 
     <form name="proceed_form" action="/admin/proceed" method="post">
 
@@ -14,23 +15,22 @@
 
                 <div class="field">
 
-                    <label for="start_date">С:</label><input name="start_date"
+                    <label for="start_date">From:</label><input name="start_date"
                                                              id="start_date" type="date"
                                                              required
-                                                             title="Выберите дату начала периода">
+                                                             title="Выберите дату начала периода" value="${startDate}">
                 </div>
 
                 <div class="field">
 
 
-                    <label for="end_date">По:</label><input name="end_date"
+                    <label for="end_date">To:</label><input name="end_date"
                                                             id="end_date" type="date"
                                                             required
-                                                            title="Выберите дату конца периода">
+                                                            title="Выберите дату конца периода" value="${endDate}">
                 </div>
 
-                <input type="hidden" name="action" value="show"></p>
-                <p><input type="submit" value="Показать"></p>
+                <p><input type="submit" value="Show"></p>
 
             </div>
         </div>
@@ -41,20 +41,20 @@
     <div class="admin_penal">
         <c:choose>
             <c:when test="${not empty ordersPerPeriod}">
-                <br><strong>Заказы</strong>
+                <br><strong>Orders</strong>
 
                 <link rel="stylesheet" href="${pageContext.request.contextPath}/css/order_table.css" type="text/css"/>
 
                 <table border="1">
                     <tr>
                         <td>id</td>
-                        <td>Дата</td>
-                        <td>Имя клиента</td>
-                        <td>Статус заказа</td>
-                        <td>Способ доставки</td>
-                        <td>Способ оплаты</td>
-                        <td>Статус оплаты</td>
-                        <td>Сумма заказа</td>
+                        <td>Date</td>
+                        <td>Client name</td>
+                        <td>Order status</td>
+                        <td>Shipping type</td>
+                        <td>Payment type</td>
+                        <td>Payment status</td>
+                        <td>Total</td>
                     </tr>
                     <c:forEach items="${ordersPerPeriod}" var="order">
 
@@ -67,11 +67,11 @@
                             <td>${order.shippingType}</td>
                             <td>${order.paymentType}</td>
                             <td>${order.paymentStatus}</td>
-                            <td>${order.totalSumm}</td>
+                            <td>${order.totalSumm} rub.</td>
 
                             <td>
-                                <a href="edit_order.jsp?order_id=${order.id}">
-                                    <img src="../images/edit.png" alt="Редактировать" name="edit"/></a>
+                                <a href="admin/edit_order?id=${order.id}">
+                                    <img src="/resources/images/edit.png" alt="Edit" name="edit"/></a>
                             </td>
 
                         </tr>
@@ -79,11 +79,11 @@
                 </table>
             </c:when>
             <c:otherwise>
-                <br><strong>В базе нет заказов</strong>
+                <br><strong>There is no orders in the base</strong>
             </c:otherwise>
         </c:choose>
 
-        <br><strong>Выручка за период: ${proceedPerPeriod} руб.
+        <br><strong>Proceed per period: ${proceedPerPeriod} rub.
     </strong>
 
 
