--- a/src/main/webapp/WEB-INF/views/jspf/adminf/all_orders.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/adminf/all_orders.jspf
@@ -3,20 +3,18 @@
 
     <c:choose>
         <c:when test="${not empty allOrdersList}">
-            <br><strong>Заказы</strong>
-
-            <%--<link rel="stylesheet" href="${pageContext.request.contextPath}/css/order_table.css" type="text/css"/>--%>
+            <br><strong>Orders</strong>
 
             <table border="1">
                 <tr>
                     <td>id</td>
-                    <td>Дата</td>
-                    <td>Имя клиента</td>
-                    <td>Статус заказа</td>
-                    <td>Способ доставки</td>
-                    <td>Способ оплаты</td>
-                    <td>Статус оплаты</td>
-                    <td>Сумма заказа</td>
+                    <td>Date</td>
+                    <td>Client name</td>
+                    <td>Order status</td>
+                    <td>Shipping type</td>
+                    <td>Payment type</td>
+                    <td>Payment status</td>
+                    <td>Total</td>
                 </tr>
                 <c:forEach items="${allOrdersList}" var="order">
                     <tr>
@@ -27,11 +25,10 @@
                         <td>${order.shippingType}</td>
                         <td>${order.paymentType}</td>
                         <td>${order.paymentStatus}</td>
-                        <td>${order.totalSumm}</td>
-                            <%--логика находится в классе Order (что делать?)--%>
+                        <td>${order.totalSumm} rub.</td>
                         <td>
                             <a href="admin/edit_order?id=${order.id}">
-                                <img src="/resources/images/edit.png" alt="Редактировать" name="edit"/></a>
+                                <img src="/resources/images/edit.png" alt="Edit" name="edit"/></a>
                         </td>
 
 
