--- a/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
@@ -3,21 +3,21 @@
 <link href="<c:url value="/resources/css/tabs.css" />" rel="stylesheet">
 <link href="<c:url value="/resources/css/form.css" />" rel="stylesheet">
 <link href="<c:url value="/resources/css/footer.css" />" rel="stylesheet">
+<link href="<c:url value="/resources/css/order_table.css" />" rel="stylesheet">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
 <div class="sidebar1">
-    <h4>Жанры:</h4>
+    <h4>Genres:</h4>
     <ul class="nav">
-        <li><a href="/books/genre?name=all" onclick="doAjaxPost();">All books</a></li>
+        <li><a href="/books/genre?name=all">All books</a></li>
         <c:forEach items="${allGenresList}" var="genre">
             <c:choose>
                 <c:when test="${genre.name eq currentGenre}">
-                    <li><a style="color:red;" href="/books/genre?name=${genre.name}"
-                           onclick="doAjaxPost();">${genre.name}</a></li>
+                    <li><a style="color:red;" href="/books/genre?name=${genre.name}">${genre.name}</a></li>
                 </c:when>
                 <c:otherwise>
-                    <li><a href="/books/genre?name=${genre.name}" onclick="doAjaxPost();">${genre.name}</a></li>
+                    <li><a href="/books/genre?name=${genre.name}">${genre.name}</a></li>
                 </c:otherwise>
             </c:choose>
         </c:forEach>
