--- a/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
@@ -4,6 +4,7 @@
 <link href="<c:url value="/resources/css/form.css" />" rel="stylesheet">
 <link href="<c:url value="/resources/css/footer.css" />" rel="stylesheet">
 <link href="<c:url value="/resources/css/order_table.css" />" rel="stylesheet">
+<link href="<c:url value="/resources/css/popup.css" />" rel="stylesheet">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
