Fixed search bug and repeat order bug

--- a/src/main/webapp/WEB-INF/views/jspf/adminf/proceeds_per_period.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/adminf/proceeds_per_period.jspf
@@ -7,7 +7,7 @@
     <p>&nbsp;</p>
 
 
-    <form name="proceed_form" action="/admin/proceed" method="post">
+    <form name="Address_form" action="/admin/Address" method="post">
 
         <div class="edit_book_info">
             <div>
@@ -79,11 +79,11 @@
                 </table>
             </c:when>
             <c:otherwise>
-                <br><strong>There is no orders in the base</strong>
+                <br><strong>There are no orders in the base</strong>
             </c:otherwise>
         </c:choose>
 
-        <br><strong>Proceed per period: ${proceedPerPeriod} rub.
+        <br><strong>Proceed per period: ${AddressPerPeriod} rub.
     </strong>
 
 
